--- a/domain/src/main/AndroidManifest.xml
+++ b/domain/src/main/AndroidManifest.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="io.github.jisungbin.composetemplate.domain">
+<manifest package="style.carrot.android.domain">
 
 </manifest>
