--- a/presentation/src/main/AndroidManifest.xml
+++ b/presentation/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.ComposeTemplate" >
+        android:theme="@style/Theme.CarrotStyle" >
 
         <activity
             android:name="style.carrot.android.MainActivity"
